# mugiwara-dex

./: README.md  docker-compose.yml
backend/: .env  .gitignore  main.py  manage.py  pyproject.toml
backend/api/: pagination.py  urls.py  utils.py
backend/api/migrations/: 0001_initial.py  0002_devilfruit_marine_pirate_armament_haki_and_more.py  0003_remove_marine_devil_fruit_remove_pirate_devil_fruit_and_more.py  0004_alter_marine_devilfruit_alter_pirate_devilfruit.py  0005_marine_description_marine_history_pirate_description_and_more.py  0006_image.py  0007_alter_pirate_bounty.py
backend/api/models/: character.py  crew.py  devilfruit.py  image.py
backend/api/serializers/: character.py  crew.py  devilfruit.py  image.py
backend/api/views/: character.py  crew.py  devilfruit.py  image.py
backend/auth/: authentication.py  serializers.py  urls.py  views.py
backend/core/: settings.py  urls.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/frutas/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/personagens/: page.tsx
frontend/src/app/providers/: queryProvider.tsx
frontend/src/app/tripulacoes/: page.tsx
frontend/src/components/: Anims.tsx
frontend/src/components/buttons/: BackButton.tsx
frontend/src/features/: auth.ts  characterContent.ts  crewContent.ts  devilFruitContent.ts  imageContent.ts  patches.ts
frontend/src/lib/: animations.ts  api.ts
frontend/src/store/: auth.ts
frontend/src/svg/: Anchor.tsx  Beries.tsx  Pirate.tsx
(+50 files in other folders)
