[project]
name = "mugiwaradex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-stubs>=5.2.2",
    "djangorestframework-stubs>=3.16.1",
    "mypy>=1.17.1",
    "ruff>=0.12.4",
    "types-requests>=2.32.4.20250809",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.django-stubs]
django_settings_module = "core.settings"
